Upgrade gem dependencies and fix a few layout issues from foundation update.

--- a/_assets/styles/_pages.scss
+++ b/_assets/styles/_pages.scss
@@ -20,7 +20,7 @@
       margin-bottom: 0;
     }
     thead {
-      font-size: $h3-font-size;
+      @extend h4;
     }
   }
 }
